<resources>
    <string name="app_name">bullpanApp</string>
    <string name="app_name_ko">불판</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirmation">Retype your password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_up_short">Sign Up</string>
    <string name="action_sign_up_short_ko">회원가입</string>
    <string name="action_sign_up_ko">가입하기</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in_short_ko">로그인</string>
    <string name="action_without_sign_in_short_ko">로그인 없이 시작하기</string>
    <string name="action_sendbird_start_short_ko">여기를 눌러 시작하기</string>

    <string name="Lorem_ipsum">Lorem ipsum dolor sit amet, id nulla massa pede sed porta vitae, pede lacus, ligula molestie, amet pulvinar ligula, vivamus pellentesque. Non amet nulla, non luctus elit ligula fringilla. Pretium ante turpis mi, mattis duis odio integer, et quam vehicula eu in mauris, etiam cras et in at nunc neque. Wisi tincidunt, tincidunt morbi libero faucibus, tincidunt tristique ut sem pellentesque ipsum felis, integer ullamcorper posuere eu vivamus sit, tincidunt rutrum sed montes dolor potenti fusce. Ultricies curabitur enim risus.</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_chat_room">chatRoomActivity</string>
    <string name="title_activity_chatting">chattingActivity</string>

    <string name="title_activity_user">userActivity</string>

    <string name="title_activity_sendbird_start">SendbirdStartActivity</string>
    <string name="title_activity_sendbird_sign_in">SignIn</string>

</resources>
