<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.bullpan.bullpanapp.StartActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_up_short_ko"
        android:id="@+id/btn_sign_up"
        android:layout_marginBottom="136dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/btn_sign_in"
        android:layout_alignStart="@+id/btn_sign_in"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_in_short_ko"
        android:id="@+id/btn_sign_in"
        android:layout_above="@+id/btn_without_sign_in"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_ko"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="83dp"
        android:textSize="32sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_without_sign_in_short_ko"
        android:id="@+id/btn_without_sign_in"
        android:layout_above="@+id/btn_sign_up"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
