<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:gravity="center_horizontal"
              android:orientation="vertical"

              android:background="@color/bgRed"
              tools:context="com.bullpan.bullpanapp.activity.SignUpActivity">




    <android.support.design.widget.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:elevation="0dp"
            app:elevation="0dp">
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="48.67dp"
                android:background="@color/bgRed"
                app:theme="@style/Custom.Widget.toolbar"
                android:contentInsetLeft="0dp"
                android:contentInsetStart="0dp"
                android:paddingLeft="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetStart="0dp"
                android:paddingRight="0dp">
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorTransparent"
                    android:src="@drawable/ic_back_white"
                    android:id="@+id/btn_up"
                    android:visibility="gone"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="회원가입"
                    android:layout_gravity="center"
                    android:textSize="20dp"
                    android:textColor="@color/colorWhite"
                    android:gravity="center"></TextView>
            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>
        <LinearLayout
            android:id="@+id/sign_up_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="44.67dp"
            android:paddingRight="44.67dp"
            android:orientation="vertical"
            android:paddingTop="99dp">


            <AutoCompleteTextView
                android:id="@+id/email_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorGrayTransparent"
                android:typeface="normal"
                android:textSize="18dp"
                android:shadowColor="#fff"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="9dp" />
            <EditText
                android:id="@+id/password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@integer/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorGrayTransparent"
                android:typeface="normal"
                android:textSize="18dp"
                android:password="true"
                android:drawableLeft="@drawable/ic_key"
                android:drawablePadding="9dp"
                android:layout_marginTop="11dp"/>



            <EditText
                android:id="@+id/nickname_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="닉네임"
                android:imeActionId="@integer/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorGrayTransparent"
                android:typeface="normal"
                android:textSize="18dp"
                android:password="true"
                android:drawableLeft="@drawable/ic_person"
                android:drawablePadding="9dp"
                android:layout_marginTop="11dp"/>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn_sign_up"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="48.33dp"
                    android:textStyle="bold"
                    android:background="@drawable/bg_btn_sign_up_white_new"
                    android:layout_above="@+id/imageView3"
                    android:stateListAnimator="@null"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="39.67dp"
                    android:id="@+id/imageView3"
                    android:layout_above="@+id/btn__facebook_sign_up"
                    android:background="@drawable/banner_sign_up_or_new"/>

                <Button
                    style="?android:textAppearanceSmall"
                    android:id="@+id/btn__facebook_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="48.33dp"
                    android:textStyle="bold"
                    android:background="@drawable/bg_btn_facebook_sign_up_new"
                    android:layout_marginBottom="82dp"
                    android:layout_alignParentBottom="true"
                    android:stateListAnimator="@null"/>
            </RelativeLayout>

        </LinearLayout>

</LinearLayout>
