<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:background="@color/bgRed"
              tools:context="com.bullpan.bullpanapp.activity.SignInActivity"
              android:weightSum="1"
              android:gravity="center_horizontal">


    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <!--<ScrollView-->
        <!--android:id="@+id/login_form"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!-->-->


        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="47.67dp"
            android:paddingRight="47.67dp"
            android:layout_weight="1.48">
            <!-- Login progress -->
            <ImageView
                android:layout_width="207.33dp"
                android:layout_height="158.33dp"
                android:id="@+id/imageView"
                android:src="@drawable/logo_big"
                android:layout_marginTop="78dp"
                android:layout_marginBottom="13.33dp"
                android:layout_gravity="center_horizontal"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2"
                android:src="@drawable/logo_bullpan_text"
                android:layout_gravity="center_horizontal"
                android:cropToPadding="true"
                android:layout_marginBottom="32dp"/>
            <!--<android.support.design.widget.TextInputLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--app:-->
                <!-->-->
                <!--<ImageView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:src="@drawable/logo_bullpan_text"-->
                    <!--android:layout_gravity="center_horizontal"-->
                    <!--android:cropToPadding="true"-->
                    <!--android:layout_marginBottom="62dp"/>-->
                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorGrayTransparent"
                    android:typeface="normal"
                    android:textSize="18dp"
                    android:shadowColor="#fff"
                    android:drawableLeft="@drawable/ic_lock"
                    android:drawablePadding="9dp" />

            <!--</android.support.design.widget.TextInputLayout>-->

            <!--<android.support.design.widget.TextInputLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!-->-->

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@integer/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorGrayTransparent"
                    android:typeface="normal"
                    android:textSize="18dp"
                    android:password="true"
                    android:drawableLeft="@drawable/ic_key"
                    android:drawablePadding="9dp"
                    />

            <!--</android.support.design.widget.TextInputLayout>-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="59dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/linearLayout"
                    android:layout_alignWithParentIfMissing="true"
                    android:layout_alignTop="@+id/textView">

                    <Button
                        android:id="@+id/email_sign_in_button"
                        android:layout_width="0dp"
                        android:layout_height="48.33dp"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:background="@drawable/bg_btn_login_new"
                        android:layout_marginRight="1.67dp"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:stateListAnimator="@null"/>

                    <Button
                        android:id="@+id/btn_sign_up"
                        android:layout_width="0dp"
                        android:layout_height="48.33dp"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:background="@drawable/bg_btn_singup_new"
                        android:layout_marginLeft="1.67dp"
                        android:stateListAnimator="@null"/>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="비밀번호를 잊으셨나요?"
                    android:id="@+id/textView"
                    android:textColor="@color/colorGrayTransparent"
                    android:textSize="13.33dp"
                    android:gravity="center_horizontal"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="59dp"/>
            </RelativeLayout>

        </LinearLayout>
    <!--</ScrollView>-->

</LinearLayout>
